# cs50_introduction_to_ai

./: .gitignore
attention/: requirements.txt  setup.sh
attention/cs50ai/: analysis.md  mask.py  pyproject.toml
crossword/: generate.py
degrees/: basics.md  degrees.py
heredity/: heredity.py
knights/: puzzle.py
minesweeper/: minesweeper.py
nim/: nim.py
pagerank/: pagerank.py
parser/: parser.py
shopping/: shopping.py
tictactoe/: tictactoe.py
traffic/: README.md  traffic.py
