[project]
name = "cs50ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pillow==10.4.0",
    "tensorflow==2.17.0",
    "tensorflow-io-gcs-filesystem==0.37.0",
    "tf-keras==2.17.0",
    "transformers==4.44.0",
]
